Fix overflowing elements by limiting events shown, set z index of footer higher

--- a/src/containers/AsideEvents/_AsideEvents.scss
+++ b/src/containers/AsideEvents/_AsideEvents.scss
@@ -45,7 +45,7 @@ aside {
     width: 100%;
     bottom: 0;
     padding: 10px 0;
-
+    z-index: 10;
     a {
       color: $secondary-light;
     }
